[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-community-connectors-vector"
version = "0.1.0"
description = "Vector pipeline observability connector for Lakeflow Community Connectors"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5.0",
    "requests>=2.28.0",
    "lakeflow-community-connectors>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["databricks.labs.community_connector.sources.vector"]

[tool.setuptools.package-dir]
"databricks.labs.community_connector.sources.vector" = "."

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml"]
